# NPC

./: eg.sh  pyproject.toml  requirements.txt
config/self_supervised/: npc_example.yml
