[project]
name = "npc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
]
